# CITS2002_PROJECT1

./: .gitignore  CMakeLists.txt  README.md  runml.c
.github/workflows/: cmake-multi-platform.yml
includes/: const.h  parser.h  pre_process.h  symbol_table.h
sample/: test09.ml  test10.ml  test11.ml  test12.ml
src/: parser.c  pre_process.c  runml.c  symbol_table.c  translator.c
